# virtual-poster

./: .env.example  .eslintrc.js  .gitignore  .js  .prettierrc.js  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE.ja.md  LICENSE.md  README.md  babel.config.js  icon_list.txt  invalidate_cloudfront.js  jest.config.js  nodemon.json  package.json  tsconfig.json  virtual_poster.example.yaml  vue.config.js
@types/: types.d.ts
api/: $api.ts  @types.ts
api/blind_sign/: $api.ts
api/comments/: $api.ts
api/groups/: $api.ts  index.ts
api/id_token/: $api.ts  index.ts
api/latency_report/: $api.ts  index.ts
api/logout/: $api.ts  index.ts
api/maps/: $api.ts  index.ts
api/people/: $api.ts  index.ts
api/people_multi/: $api.ts
api/ping/: $api.ts  index.ts
api/posters/: $api.ts  index.ts
api/public_key/: $api.ts  index.ts
api/register/: $api.ts  index.ts
api/socket_url/: $api.ts  index.ts
client/: Admin.vue  CreateRoom.vue  Index.vue  LoadTesting.vue  Login.vue  MyPage.vue  PosterList.vue  Room.vue  admin.ts  create_room.ts  encryption.ts  index.ts  loadtesting.ts  login.ts  mypage.ts  poster_list.ts  room.ts  room_chat_service.ts  room_log_service.ts  room_map_service.ts  room_people_service.ts  room_poster_service.ts  socket.ts  util.ts
client/admin/: Admin.vue  Manage.vue  ManagePosters.vue  ManageRoomPosters.vue  ManageRooms.vue  ManageUsers.vue  MemberList.vue  admin.ts  admin_room_service.ts
client/mypage/: MyPage.vue  MypagePoster.vue  mypage_service.ts
client/register/: Register.vue  register.ts
client/room/: CellInfo.vue  ChatLocal.vue  Map.vue  MapCell.vue  MapCellPerson.vue  MenuOnMap.vue  Poster.vue  (+14 more)
common/: maps.ts  util.ts
migration/: schema.sql
prepare_data/: mk_avatar_base64.js  split_avatar_images.py
public/: admin.html  create_room.html  index.css  index.html  loadtesting.html  login.html  mypage.html  poster_list.html  register.html  room.html
rust-server/: Cargo.toml
rust-server/.cargo/: config
rust-server/src/: auth.rs  chat.rs  defs.rs  emit.rs  groups.rs  main.rs  maps.rs  model.rs  people.rs  posters.rs  socket_main.rs  socket_server.rs
server/: app.ts  auth.ts  config.ts  email.ts  index.ts  parse_config.ts  socket.ts  socket_index.ts  socket_standalone.ts  sticky.ts  test_util.ts  virtual-poster.v1.yaml
server-go/: go.mod  go.sum  server_go.go
server-nim/: server_nim  server_nim.nimble
server-rust/: Cargo.toml
server-rust/.cargo/: config
server-rust/src/: auth.rs  defs.rs  emit.rs  main.rs  maps.rs  model.rs  posters.rs  socket_main.rs  socket_server.rs
src/: cell.css
tests/: socket_multi_test.js  socket_process_test.js  socket_test.js
(+200 files in other folders)
