[package]
name = "rust-server"
version = "0.1.0"
authors = ["Hiro Kai <fullerenec84@gmail.com>"]
edition = "2018"
description = "Web server test"
default-run = "rest"

[[bin]]
name = "ws"
path = "src/socket_main.rs"

[[bin]]
name = "rest"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-rt = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "*"
futures = "*"
redis-async = "0.6.2"
actix-redis = "0.8.2"
actix-service = "1.0.5"
clap = "2.20.3"
num_cpus = "*"
qstring = "*"
# actix-web-httpauth = "*"
rand = "0.7"
bytes = "0.5.2"
jsonwebtoken = "7"
redis = "0.16.0"
bb8-postgres = "0.4.0"
tokio-postgres = "*"
postgres-types = {version = "*", features = ["derive"]}
chrono = "0.4"
# sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros","postgres" ] }
dotenv = "0.15.0"
strum = "0.19"
strum_macros = "0.19"
actix-cors="0.2"
actix-files="0.2"
sha2="*"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web-actors = "2.0.0"
futures-util="0.3.5"
tokio={version = "0.2.2", features = ["time"]}
log="*"
itertools="0.9"