[package]
authors = ["Hiro Kai <fullerenec84@gmail.com>"]
default-run = "rest"
description = "Web server test"
edition = "2018"
name = "rust-server"
version = "0.1.0"

[[bin]]
name = "ws"
path = "src/socket_main.rs"

[[bin]]
name = "rest"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-redis = "0.8.2"
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-web = {version = "2.0", features = ["openssl"]}
clap = "2.20.3"
env_logger = "*"
futures = "*"
num_cpus = "*"
openssl = {version = "0.10", features = ["v110"]}
qstring = "*"
redis-async = "0.6.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# actix-web-httpauth = "*"
bb8-postgres = "0.4.0"
bytes = "0.5.2"
chrono = "0.4"
jsonwebtoken = "7"
postgres-types = {version = "*", features = ["derive"]}
rand = "0.7"
redis = "0.16.0"
tokio-postgres = "*"
# sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros","postgres" ] }
actix-cors = "0.2"
actix-files = "0.2"
actix-web-actors = "2.0.0"
dotenv = "0.15.0"
futures-util = "0.3.5"
itertools = "0.9"
log = "*"
sha2 = "*"
strum = "0.19"
strum_macros = "0.19"
time = "*"
tokio = {version = "0.2.2", features = ["time"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
yaml-rust = "0.4"
